force-app/main/default/objects/Seedforce_Generator_Option__c/Seedforce_Generator_Option__c.object-meta.xml
<CustomObject>
    <label>Seedforce Generator Option</label><pluralLabel>Seedforce Generator Options</pluralLabel>
    <nameField><label>Generator Key</label><type>Text</type></nameField>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>