force-app/main/default/objects/Seedforce_Generator_Option__c/fields/Active__c.field-meta.xml
<CustomField><fullName>Active__c</fullName><defaultValue
    >true</defaultValue><label>Active</label><type>Checkbox</type></CustomField>