force-app/main/default/objects/Seedforce_Generator_Option__c/fields/Display_Label__c.field-meta.xml
<CustomField><fullName>Display_Label__c</fullName><label
    >Display Label</label><length>80</length><type>Text</type></CustomField>