force-app/main/default/objects/Seedforce_Generator_Option__c/fields/Generator_Key__c.field-meta.xml
<CustomField>
    <fullName>Generator_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId>
    <label>Generator Key</label><length>80</length><required>true</required><type>Text</type><unique>true</unique>
</CustomField>