force-app/main/default/objects/Seedforce_Generator_Option__c/fields/Sort_Order__c.field-meta.xml
<CustomField><fullName>Sort_Order__c</fullName><label
    >Sort Order</label><precision>4</precision><scale>0</scale><type>Number</type></CustomField>